--- a/style.scss
+++ b/style.scss
@@ -56,90 +56,47 @@ $web-font-path: "No";
        url('fonts/marcellus-sc-v7-latin-regular.woff') format('woff');
 }
 
-/* 
-article, aside, footer, header, hgroup, nav, section, main {
-    display:block;
+.cooltip {
+  background: #E8F5E9; 
+  padding-left: 20px; 
+  padding-right: 20px; 
+  padding-top: 15px; 
+  border-color: #008b72; 
+  border-radius: 15px; 
+  border-style: solid;
 }
 
-body{
-    padding: 0;
-    margin: 0;
-    font-family: 'Lora', serif;
-}
-header {
-    font-weight: normal;
-    font-size: 2.5em;
-    font-family: "Lora", serif;
-    width: 90%;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 0.3em;
-    margin-top: 0.8em;
-}
-pre {
-    overflow-x: auto;
-}
-main, footer {
-    width: 90%;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-footer {
-    margin-top: 2em;
-    margin-bottom: 0.5em;
-}
-h1, h2, h3 {
-    font-weight: normal;
-    font-family: "Marcellus SC", sans-serif;
-    margin-bottom: 0.2em;
-    margin-top: 0.8em;
-    color: #a81010;
-}
-h1 {
-    font-size: 1.3em;
-}
-h2 {
-    font-size: 1.2em;
-}
-h3 {
-    font-size: 1em;
-}
-p {
-    margin-top: 0.5em;
-}
-a {
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-div.display-eq {
-  text-align: center;
-  font-style: italic;
-}
-div.display-eq span.text {
-  font-style: normal;
+
+.chilltip {
+  background: #E7E6FF; 
+  padding-left: 20px; 
+  padding-right: 20px; 
+  padding-top: 15px; 
+  border-color: #6c5ce7; 
+  border-radius: 15px; 
+  border-style: solid;
 }
 
-canvas.box {
-  border: solid 2px black;
-  border-radius: 3px;
+.bluetip {
+  background: #E1EDFF; 
+  padding-left: 20px; 
+  padding-right: 20px; 
+  padding-top: 15px; 
+  border-color: #0984e3; 
+  border-radius: 15px; 
+  border-style: solid;
 }
-pre code {
-  margin-left: 2em;
-  font-size: 11px;
+
+
+.hottip {
+  background: #FFEBEE; 
+  padding-left: 20px; 
+  padding-right: 20px; 
+  padding-top: 15px; 
+  border-color: #e74c3c; 
+  border-radius: 15px; 
+  border-style: solid;
 }
-ul li {
-  margin: 7px 0;
-}
-@media only screen and (max-width: 600px) {
-    header {
-        font-size: 2em;
-    }
-}
-*/
 
 .vocab {
   color: #008B72;
